refactor: Remove PartyRoomReservationDto.Simple Class and refactor party room reservation search api using JsonFilter